--- a/Day 1 Montreal Temperature.Rmd
+++ b/Day 1 Montreal Temperature.Rmd
@@ -76,7 +76,7 @@ The code below will load the data we will need for this exercise. The last line 
 
 We will model **daily_avg_site** (i.e., the daily mean temperature), but other variables could also be of interest as outcomes. For example, if you have time you can also try modelling **night_ave_site**, which is the night-time average temperature.
 
-Take a second to look at the dataframe to get a sense of the data structure. You can type 'View(mtl_temp_dat) in the console to do this.
+Take a minute to look at the dataframe to get a sense of the data structure. You can type 'View(mtl_temp_dat) in the console to do this.
 
 ```{r Load Data Used for Modelling, echo=FALSE}
 #Load Temperature Database
@@ -587,7 +587,7 @@ We will now evaluate our GAM model using a cross-validation procedure. We use a 
 
 ```{r GAM Cross-Validation, echo = FALSE}
 #Run the Cross Validation
-set.seed(1980)
+set.seed(1980) #change this number
 holdout <- makeResampleDesc("Holdout") # 2/3 used for training, 1/3 used for test
 
 filter_gam_cv <- resample(tune_wrapper_gam, # Our Filter Wrapper
@@ -748,7 +748,7 @@ Let's evaluate the performance of our random forest model (with tuned hyperparam
 
 ```{r 3. Cross Validation of Random Forest Model, echo=FALSE}
 
-set.seed(1980)
+set.seed(1980) #Change this number
 
 # Define a new learner object with the tuned hyperparameters
 tuned_forest <- setHyperPars(forest, par.vals = tuned_forest_pars$x) 
@@ -904,7 +904,7 @@ XGBoost has several **hyperparameters** we need to specify before we start train
 7.  "**nrounds**": The number of sequentially built trees in the model.
 
 ```{r 2. Hyperparameter tuning for XGBoost, echo=FALSE}
-set.seed(1980)
+set.seed(1980) #Change this number
 #Define the Paramater Space to Search
 xgb_param_space <- makeParamSet(
   makeNumericParam("eta",lower=0,upper=1),
@@ -915,7 +915,7 @@ xgb_param_space <- makeParamSet(
   makeNumericParam("colsample_bytree", lower=0.2, upper=1),
   makeIntegerParam("nrounds", lower=30,upper=30) #Fix this to start, can adjust later if needed
 )
-#Perform a Random Search (50 interations)
+#Perform a Random Search (100 interations)
 rand_search <- makeTuneControlRandom(maxit = 100) #Again we use 100 iterations to save time
 
 kfold10 <- makeResampleDesc("CV",iters=10)
@@ -935,7 +935,7 @@ We can now evaluate our XGBoost model (with tuned hyperparameters) in a 3-fold c
 
 ```{r 3. XGBoost Cross Validation, echo = FALSE}
 
-set.seed(1980)
+set.seed(1980) #Change this number
 
 # Defines a new learner object with the tuned hyperparameters
 tuned_xgb <- setHyperPars(xgb, par.vals = tuned_xgb_params$x) 
@@ -1092,7 +1092,7 @@ The test set is used to evaluate the final model.
 ```{r Create Training, Validation, and Test Sets, echo = FALSE}
 
 #make this example reproducible
-set.seed(2012)
+set.seed(2012) #Change this number
 
 #use 70% of dataset as training set and 30% as validation/test set
 sample <- sample.split(mtl_temp_dat_clean_std$ln_daily_avg_site, SplitRatio = 0.7)
@@ -1144,7 +1144,7 @@ test_dat <- as.matrix(test_dat)
 
 Now we can build our dense neural network.
 
-Dense neural networks are made up of a sequence of data processing layers. In the example below, the model includes two densely connected layers with 32 and 64 units each followed by a dropout layer (this helps with overfitting by "dropping out" (i.e., setting to zero) a portion of the unit outputs during training ). The final layer the provides our prediction.
+Dense neural networks are made up of a sequence of data processing layers. In the example below, the model includes two densely connected layers with 32 and 64 units each followed by a dropout layer (this helps with over-fitting by "dropping out" (i.e., setting to zero) a portion of the unit outputs during training ). The final layer the provides our prediction.
 
 We will also define "callbacks" which can be used to
 
@@ -1421,7 +1421,7 @@ ggarrange(xgb_map,
 
 -   We hope this exercise has been useful for you in learning about different ways of modelling temperature variations across a city. As you can see, not all of the models will necessarily provide the same answers and not all will be equally suitable for use in epidemiological analyses. We need to use our subject matter expertise to select a models that make the most sense and perhaps try several different models to evaluate the sensitivity of our results to the method of exposure assessment.
 
--   If you have time, you can try developing models for a different outcome (like night-time temperature).
+-   If you have time, you can try different hyper-parameters or trying developing models for a different outcome (like night-time temperature).
 
 -   Please make sure you have entered your model performance in the Google Sheet (link below) so we can compare across all participants at the end of the workshop.
 
